# ludan_workspace_ros1_noetic

./: .gitignore  setproxy.bash  setproxy.sh  unsetproxy.sh
.cursor/rules/: riper-5.mdc
.github/workflows/: ci.yml
.tasks/: 2025-11-21_1_damiao-motor-driver-architecture-optimization.md
ludan_moveit_config/config/: fake_controllers.yaml  gazebo_ludan_v0.urdf  ludan_v0.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
ludan_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  setup_assistant.launch  stomp_planning_pipeline.launch.xml
src/: LICENSE  README.md  robot_model_description.sh
src/damiao_motor_control_board_serial/: CMakeLists.txt  package.xml
src/damiao_motor_control_board_serial/include/damiao_motor_control_board_serial/: motor_data.h  motors_control_board_connect.h
src/damiao_motor_control_board_serial/launch/: test_motor.launch
src/damiao_motor_control_board_serial/msg/: MotorState.msg  MotorStates.msg
src/damiao_motor_control_board_serial/scripts/: test_motor_rotation.py
src/damiao_motor_control_board_serial/src/: motors_control_board_connect.cpp  test_motor.cpp  test_motor_read.cpp  test_single_motor.cpp
src/damiao_motor_core/: CMakeLists.txt  package.xml
src/damiao_motor_core/include/damiao_motor_core/: command_queue.h  config.h  error_handler.h  motor_command.h  motor_driver_core.h  motor_state.h  protocol.h  ring_buffer.h  serial_transport.h  transport.h
src/damiao_motor_core/src/: command_queue.cpp  config.cpp  error_handler.cpp  motor_command.cpp  motor_driver_core.cpp  motor_state.cpp  protocol.cpp  ring_buffer.cpp  serial_transport.cpp  transport.cpp
src/damiao_motor_core/test/: test_command_queue.cpp  test_motor_driver_core.cpp  test_protocol.cpp  test_ring_buffer.cpp
src/damiao_motor_driver/: CMakeLists.txt  README.md  motor_hw_interface_plugin.xml  package.xml
src/damiao_motor_driver/cfg/: driver_limits.cfg  effort_controllers.yaml  moveit_controllers.yaml
src/damiao_motor_driver/config/: controllers.yaml  joint_mapping_example.yaml  motor_config.yaml
src/damiao_motor_driver/include/damiao_motor_driver/: motor_driver.h  motor_driver_node.h  motor_hw_interface.h  motor_protocol.h  motor_serial.h
src/damiao_motor_driver/launch/: motor_cmd_bridge.launch  motor_driver.launch  motor_hw_interface.launch  motor_hw_with_effort_controller.launch  motor_hw_with_moveit.launch  motor_hw_with_rl.launch  moveit_with_motor_driver.launch
src/damiao_motor_driver/msg/: MotorCommand.msg
src/damiao_motor_driver/scripts/: analyze_startup_log.md  check_and_fix_joint_states.py  check_controller_logs.sh  check_controller_nodes.py  check_hardware_connection.py  check_registered_joints.py  check_startup_logs.sh  check_system_status.sh  clear_all_errors.py  debug_joint_state_controller.sh  diagnose_joint_states.sh  diagnose_joint_states_issue.py  diagnose_motor_feedback.py  disable_all_motors.py  enable_all_motors.py  fix_joint_state_controller.py  fix_joint_states_issue.sh  manual_start_joint_state_controller.sh  motor_control.py  motor_discovery_test.py  moveit_control_test.py  policy_bridge.py  quick_check_controller.sh  quick_test_moveit.sh  save_all_zeros.py  simple_check_joint_states.py  simplify_stl_to_box.py  test_joint_state_controller_startup.py  test_moveit_execution.py  test_moveit_trajectory.py  view_startup_logs.sh
src/damiao_motor_driver/src/: motor_cmd_bridge.cpp  motor_driver.cpp  motor_driver_node.cpp  motor_driver_node_main.cpp  motor_hw_interface.cpp  motor_hw_interface_node.cpp  motor_serial.cpp  send_single_motor_node.cpp  trajectory_controller_node.cpp
src/damiao_motor_driver/srv/: SendCommand.srv  SendCommands.srv
src/damiao_motor_driver/test/: driver_integration_test.cpp  motor_hw_interface_test.cpp  protocol_test.cpp
src/damiao_motor_driver/test_nodes/: send_single_motor_node.cpp  trajectory_controller_node.cpp
src/damiao_policy_bridge/: CMakeLists.txt  package.xml
src/damiao_policy_bridge/config/: policy_bridge_example.yaml
src/damiao_policy_bridge/lib/: action_filter.py  data_recorder.py  policy_loader.py
src/damiao_policy_bridge/nodes/: policy_bridge_node.py
src/dmbot_serial/: CMakeLists.txt  package.xml
src/dmbot_serial/include/dmbot_serial/: motor_data.h  robot_connect.h
src/dmbot_serial/src/: robot_connect.cpp  stm32_motor_bridge.py  test_motor_read.cpp
src/inspire_hand/: CMakeLists.txt  inspire_hand使用方法.txt  package.xml
src/inspire_hand/include/: hand_control.h
src/inspire_hand/launch/: dual_hand.launch  hand_control.launch  multi_bringup.launch
src/inspire_hand/msg/: get_angle_act_1.msg  get_force_act_1.msg  get_touch_act_1.msg  hand_command.msg  set_angle__1.msg  set_force_1.msg  set_speed_1.msg
src/inspire_hand/script/: inspire_hand_serial_topic.py
src/inspire_hand/src/: hand_control.cpp  hand_control_client.cpp  hand_control_lib.cpp  handcontroltopicpublisher.cpp  handcontroltopicpublisher1.cpp  handcontroltopicsubscriber.cpp  handcontroltopicsubscriber1.cpp
src/inspire_hand/srv/: set_angle_1.srv
src/legged_examples/legged_dm_hw/: CMakeLists.txt  package.xml
src/legged_examples/legged_dm_hw/include/legged_dm_hw/: DmHW.h
src/legged_hw/include/legged_hw/: LeggedHW.h  LeggedHWLoop.h
src/legged_hw/src/: LeggedHW.cpp  LeggedHWLoop.cpp
src/ludan_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ludan_moveit_config/config/: fake_controllers.yaml  gazebo_controllers.yaml  gazebo_ludan_v0.urdf  joint_limits.yaml  kinematics.yaml  ludan_v0.srdf  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
src/ludan_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  gazebo.launch  ompl_planning_pipeline.launch.xml  ros_controllers.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml
