<?xml version="1.0"?>
<package format="2">
  <name>damiao_motor_control_board_serial</name>
  <version>0.0.0</version>
  <description>serial processing package</description>
  <maintainer email="zhengbi.yong@outlook.com">Zhengbi Yong</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>

  <export/>
</package>
