<?xml version="1.0"?>
<package format="2">
  <name>damiao_motor_driver</name>
  <version>1.0.0</version>
  <description>Damiao Motor MIT control driver for multi-motor systems</description>

  <maintainer email="zhengbi.yong@outlook.com">Zhengbi Yong</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>serial</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rosbag</depend>
  <depend>damiao_motor_control_board_serial</depend>
  <depend>damiao_motor_core</depend>

  <!-- 为消息生成增加的依赖 -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <hardware_interface plugin="${prefix}/motor_hw_interface_plugin.xml"/>
  </export>

</package>
