<?xml version="1.0"?>
<package format="2">
  <name>inspire_hand</name>
  <version>1.0.0</version>
  <description>RS232 and RS485 control node for basic communication with inspire hand</description>
  
  <maintainer email="111@163.com">Hanson Du</maintainer>
  <license>BSD</license>
  <url type="website">http://www.inspire-robots.com/</url> 
  <author email="111@163.com">Hanson Du</author>

  <!-- ========== 构建工具依赖 ========== -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ========== 构建依赖 ========== -->
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <!-- ========== 运行依赖 ========== -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
